Adjustments to workflow

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Travel App CI
 on:
   push:
     branches:
@@ -14,11 +14,12 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@v2
-        name: Checkout [main]
+        name: Checkout [develop]
         with:
           fetch-depth: 0
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2
+        main-branch-name: 'develop'
       - uses: actions/setup-node@v1 
         with: 
           node-version: '14'
