Adjustments to workflow

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,8 @@ jobs:
           fetch-depth: 0
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2
-        main-branch-name: 'develop'
+        with:
+          main-branch-name: 'develop'
       - uses: actions/setup-node@v1 
         with: 
           node-version: '14'
