--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,10 +46,12 @@ jobs:
         uses: actions/setup-node@v1
         with: 
           node-version: '16'
-        run: npm install
+      - run: npm install
       - run: npx nx-cloud start-ci-run
-      - run: npx nx affected --target=build --parallel --max-parallel=3
-      - run: npx nx affected --target=test --parallel --max-parallel=2
+      - name: Build
+        run: npx nx affected --target=build --parallel --max-parallel=3
+      - name: Test
+        run: npx nx affected --target=test --parallel --max-parallel=2
       - run: npx nx-cloud stop-all-agents
   agents:
     runs-on: ubuntu-latest
