--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,17 +23,22 @@ jobs:
           main-branch-name: 'develop'
       - uses: actions/setup-node@v1 
         with: 
-          node-version: '14'
-      - run: npm install
-      - run: npx nx-cloud start-ci-run    
-      - run: npx nx affected --target=build --parallel --max-parallel=3
-      - run: npx nx affected --target=test --parallel --max-parallel=2
-      - run: npx nx-cloud stop-all-agents
+          node-version: '16'
+      - name: Install
+        run: npm install
+      - name: Start CI run
+        run: npx nx-cloud start-ci-run    
+      - name: Build
+        run: npx nx affected --target=build --parallel --max-parallel=3
+      - name: Test
+        run: npx nx affected --target=test --parallel --max-parallel=2
+      - name: Stop all agents
+        run: npx nx-cloud stop-all-agents
   pr:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
     steps:
-      - name: Check out repo
+      - name: Checkout branch
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.ref }}
