--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/forms": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/pwa": "^13.2.0",
     "@angular/router": "~13.1.0",
+    "@angular/service-worker": "~13.1.0",
     "@nrwl/angular": "13.5.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
