--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "^13.2.0",
     "@angular/platform-browser": "~13.1.0",
@@ -28,6 +29,8 @@
     "@angular/router": "~13.1.0",
     "@angular/service-worker": "~13.1.0",
     "@nrwl/angular": "13.5.3",
+    "firebase": "^9.6.6",
+    "rxfire": "^6.0.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
