--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "ng": "nx",
     "nx": "nx",
+    "sme": "source-map-explorer",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
     "start:travel-app": "nx serve travel-app",
     "test:travel-app": "nx test travel-app",
-    "test:all": "nx run-many --target=test --all "
+    "build:travel-app": "nx build travel-app",
+    "test:all": "nx run-many --target=test --all"
   },
   "private": true,
   "dependencies": {
@@ -62,6 +64,7 @@
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "prettier": "^2.5.1",
+    "source-map-explorer": "^2.5.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
   }
